added java 22+ support